modules/gdscript/tests/scripts/parser/errors/mistaken_increment_operator.gd
func test():
	var a = 0
	print(a++)
